# tiff-encoder

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
docs/: aliases.js  search-index.js
docs/src/tiff/: lib.rs.html  tiff_type.rs.html
docs/src/tiff_encoder/: lib.rs.html  tag.rs.html  tiff_type.rs.html
docs/tiff/: AllocatedDatablock.t.html  Datablock.t.html  EndianFile.t.html  FieldValues.t.html  Offsets.t.html  SimpleDatablock.t.html  TiffFile.t.html  all.html  enum.Endianness.html  index.html  sidebar-items.js  struct.ByteBlock.html  struct.Cursor.html  struct.EndianFile.html  struct.Ifd.html  struct.IfdChain.html  struct.Offsets.html  struct.TiffFile.html  struct.TiffTypeValues.html  trait.AllocatedDatablock.html  trait.Datablock.html  trait.FieldValues.html  trait.SimpleDatablock.html  type.FieldTag.html
docs/tiff/tiff_type/: DOUBLE.t.html  FLOAT.t.html  RATIONAL.t.html  SBYTE.t.html  SHORT.t.html  index.html  (+16 more)
docs/tiff_encoder/: ByteBlock.t.html  FieldTag.t.html  Ifd.t.html  IfdChain.t.html  OffsetsToIfds.t.html  TiffTypeValues.t.html  all.html  enum.Endianness.html  index.html  sidebar-items.js  struct.ByteBlock.html  struct.EndianFile.html  struct.Ifd.html  struct.IfdChain.html  struct.Offsets.html  struct.OffsetsToIfds.html  struct.TiffFile.html  struct.TiffTypeValues.html  trait.Datablock.html  trait.FieldValues.html  type.FieldTag.html
src/: file.rs  ifd.rs  lib.rs  tag.rs  tiff_file.rs  tiff_type.rs  write.rs
src/field/: datablock_value.rs  ifd_value.rs  mod.rs  tiff_type_value.rs
src/ifd/: ifd.rs  mod.rs  tags.rs  types.rs  values.rs
(+188 files in other folders)
