[package]
name = "tiff-encoder"
version = "0.3.0"
edition = "2018"
authors = ["PedroGonçaloCorreia <goncalerta@gmail.com>"]
license = "MIT"
description = "Rust library for creating TIFF files."
homepage = "https://github.com/Goncalerta/tiff-encoder"
repository = "https://github.com/Goncalerta/tiff-encoder"
readme = "README.md"

[dependencies]
byteorder = "1.3.1"
